# nonley

./: .env.example  .eslintrc.js  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  GROWTH.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  e2e.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  detector.rs  lib.rs  main.rs  tray.rs
apps/embed/: package.json  vite.config.ts
apps/embed/src/: index.ts  styles.ts  widget.ts
apps/extension/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/extension/public/: manifest.json
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/: middleware.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISCLAIMER.md  PRIVACY.md  PROMPT.md  TERMS.md
e2e/: accessibility.spec.ts  api.spec.ts  login.spec.ts
infrastructure/docker/: docker-compose.prod.yml  nginx.conf  presence-engine.Dockerfile  web.Dockerfile
scripts/: setup.sh
(+95 files in other folders)
