[package]
name = "nonley-desktop"
version = "0.1.0"
description = "Nonley Desktop Companion"
authors = ["Nonley"]
edition = "2021"

[lib]
name = "nonley_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nonley-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
